--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,8 +13,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/publications/" | prepend: site.baseurl }}">Publications</a></li>
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/code-and-data/" | prepend: site.baseurl }}">Shared code and data</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/publications/" | prepend: site.baseurl }}">Publications</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/code-and-data/" | prepend: site.baseurl }}">Shared code and data</a></li>
             </ul>
             <div class="navbar-right">
                 <form class="navbar-form navbar-left">
