--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -15,6 +15,7 @@
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/publications/" | prepend: site.baseurl }}">Publications</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/code-and-data/" | prepend: site.baseurl }}">Shared code and data</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/teaching/" | prepend: site.baseurl }}">Teaching</a></li>
             </ul>
             <div class="navbar-right">
                 <form class="navbar-form navbar-left">
